# fastapi-template

./: Dockerfile  Dockerfile.security  README.md  alembic.ini  app  dev.Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
deepsee/alembic/: env.py
deepsee/alembic/versions/: c3dd31da0c49_initial_migration.py
deepsee/app/: crud.py  enums.py  main.py  models.py  schemas.py  stats.py  utils.py
deepsee/app/api/: deps.py  main.py
deepsee/app/api/routes/: auth.py  datasets.py  users.py
deepsee/app/core/: base_class.py  security.py
deepsee/backend/: README.md
deepsee/backend/app/: crud.py  db.py  main.py  models.py  schemas.py
deepsee/backend/app/api/: deps.py  main.py
deepsee/backend/app/api/routes/: auth.py  items.py  login.py  users.py
deepsee/backend/app/core/: config.py  db.py  security.py
