[tool.poetry]
name = "deepsee"
version = "0.0.1"
description = "A database for creating and sharing open-source computer vision datasets."
authors = ["jai <jaiamin130@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.3.0"
bcrypt = "4.0.1"
cffi = "1.16.0"
chardet = "5.2.0"
click = "8.1.7"
cryptography = "42.0.5"
deprecated = "1.2.14"
dnspython = "2.6.1"
ecdsa = "0.19.0"
email-validator = "2.1.1"
fastapi = "0.110.0"
gitdb = "4.0.11"
gitpython = "3.1.43"
h11 = "0.14.0"
idna = "3.6"
importlib-resources = "6.4.0"
limits = "3.11.0"
mako = "1.3.3"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
packaging = "24.0"
passlib = "1.7.4"
psycopg2-binary = "2.9.9"
pyasn1 = "0.6.0"
pycparser = "2.22"
pydantic = "2.6.4"
pydantic-settings = "2.2.1"
pydantic-core = "2.16.3"
pygments = "2.18.0"
python-dotenv = "1.0.1"
python-jose = "3.3.0"
python-multipart = "0.0.9"
rich = "13.7.1"
rsa = "4.9"
six = "1.16.0"
slowapi = "0.1.9"
smmap = "5.0.1"
sniffio = "1.3.1"
sqlalchemy = "2.0.29"
starlette = "0.36.3"
typing-extensions = "4.10.0"
uvicorn = "0.29.0"
wrapt = "1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
